force-app/main/default/objects/ccrz__E_PageLabeli18n__c/ccrz__E_PageLabeli18n__c.object-meta.xml
<CustomObject>
    <label>CC PageLabeli18n</label>
    <nameField>
        <label>CC PageLabeli18n Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC PageLabeli18ns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>