force-app/main/default/objects/ccrz__E_PageLabeli18n__c/fields/ccrz__LangSequence__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LangSequence__c</fullName>
    <formula>IF(CONTAINS(ccrz__Language__c,&apos;_&apos;),2,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LangSequence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>