force-app/main/default/objects/ccrz__E_PageLabeli18n__c/fields/ccrz__Language__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Language__c</fullName>
    <description>The locale for this translation.  Must be in the form of a standard locale identifier, e.g. en_US, fr, fr_CA, etc.</description>
    <externalId>true</externalId>
    <label>Language</label>
    <length>5</length>
    <type>Text</type>
</CustomField>