force-app/main/default/objects/ccrz__E_PageLabeli18n__c/fields/ccrz__PageLabel__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PageLabel__c</fullName>
    <description>The page label for which this is a translation for.</description>
    <label>CC Page Label</label>
    <referenceTo>ccrz__E_PageLabel__c</referenceTo>
    <relationshipLabel>CC PageLabeli18ns</relationshipLabel>
    <relationshipName>CC_PageLabeli18ns</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>