force-app/main/default/objects/ccrz__E_PageLabeli18n__c/fields/ccrz__ValueRT__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ValueRT__c</fullName>
    <description>The value of this translation as a Rich Text Area.</description>
    <label>ValueRT</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>